# portfolio

./: .gitignore  Cargo.toml  Dockerfile  Trunk.toml  index.html  portfolio-68accb635eeeaabb.js  portfolio-68accb635eeeaabb_bg.wasm
.devcontainer/: devcontainer.json
.github/workflows/: gh-pages-deploy.yml
scripts/: run_dev.sh
src/: app.rs  main.rs
src/components/: navbar.rs
src/pages/: about.rs  cv.rs  home.rs  mod.rs  not_found.rs
src/routes/: cv.rs
style/: output.css
