[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"


[dependencies]
log = "0.4"
gloo-net = { version = "0.2", features = ["http"] }


# dependecies for client (enable when csr or hydrate set)
wasm-bindgen = { version = "0.2" }
console_log = { version = "1"}
console_error_panic_hook = { version = "0.1"}
leptos = { version = "0.6.3", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6.3", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.3", features = ["csr", "nightly"] }


[package.metadata.leptos]
output-name = "portfolio"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/output.css"
assets-dir = "public"
browserquery = "defaults"
env = "DEV"
bin-features = ["csr"]



